[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
dll-syringe = { version = "0.17.1", default-features = false, features = ["syringe", "rpc-payload"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Graphics_Dwm"] }
